slowly knocking out more injects